--- a/chulassomock.cabal
+++ b/chulassomock.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 51659ad1ee232c01aca86f9472c1cf98ad53481a1fbd3e49684764a899b27488
+-- hash: 630f267808e09e126b2dc6f56a3d6d7fa7bd93db4516ed67cf7e9a3daea98b7f
 
 name:           chulassomock
 version:        0.0.0
@@ -18,6 +18,7 @@ library
       Lib
       Model.MinUser
       Model.User
+      TicketStorage.Base
   other-modules:
       Paths_chulassomock
   hs-source-dirs:
@@ -41,6 +42,7 @@ library
     , persistent-template
     , random
     , scotty
+    , sqlite-simple
     , text
     , transformers
     , wai
@@ -74,6 +76,7 @@ executable chulassomock
     , persistent-template
     , random
     , scotty
+    , sqlite-simple
     , text
     , transformers
     , wai
@@ -113,6 +116,7 @@ test-suite chulassomock-text
     , persistent-template
     , random
     , scotty
+    , sqlite-simple
     , text
     , transformers
     , wai
